# cpp-hxl-lang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: cpp_hxl_lang-config.cmake
include/hxl-lang/: core.h  hxl-lang.h
include/hxl-lang/services/: deserializer.h  parser.h  processor.h  schema-validator.h  semantic-analyzer.h  tokenizer.h  transformer.h
include/hxl-lang/traits/: traits.h
include/hxl-lang/utilities/: helpers.h  prfr-printer.h
samples/: CMakeLists.txt
samples/game-engine/: CMakeLists.txt  README.md
samples/game-engine/data/: scene.hxl
samples/game-engine/src/: engine.cpp  engine.h  main.cpp  the-game.cpp  the-game.h
samples/performance/: CMakeLists.txt  README.md
samples/performance/src/: performance.cpp
src/: deserializer.cpp  helpers.cpp  parser.cpp  prfr-printer.cpp  processor.cpp  schema-validator.cpp  semantic-analyzer.cpp  tokenizer.cpp  traits.cpp  transformer.cpp
tests/: CMakeLists.txt  tests.cpp
tests/cases/: base-case.cpp  deserializer-test.cpp  parser-test.cpp  schema-validator-test.cpp  semantic-analyzer-test.cpp  tokenizer-test.cpp  transformer-test.cpp
